--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^7.8.7",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.11",
+    "razorpay": "^2.9.6",
     "resend": "^6.5.2"
   },
   "devDependencies": {
